<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@mipmap/switch_kids_bg">
    
    <ImageView
        android:layout_width="40dp"
        android:layout_height="20dp"
        android:layout_margin="10dp"
        android:onClick="onClick"
        android:src="@mipmap/btn_close_white" />
    <RelativeLayout
        android:layout_width="542dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/comments_shape_round">

        <RelativeLayout
            android:id="@+id/commentsTitle"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:layout_marginTop="25dp">

        <TextView
            android:id="@+id/cloudComments"
            android:layout_width="119dp"
            android:layout_height="37dp"
            android:background="@drawable/cloud_comments_shape"
            android:layout_marginLeft="31dp"
            android:text="@string/cloudComments"
            android:textSize="12sp"
            android:gravity="center"
            android:textColor="#FFFFFFFF"/>

        <TextView
            android:id="@+id/teacherComments"
            android:layout_width="96dp"
            android:layout_height="37dp"
            android:background="@drawable/teacher_comments_shape"
            android:layout_toRightOf="@+id/cloudComments"
            android:layout_marginLeft="25dp"
            android:text="@string/teacherComments"
            android:textSize="12sp"
            android:gravity="center"
            android:textColor="#FFFFFFFF"/>
        <TextView
            android:id="@+id/courseComments"
            android:layout_width="115dp"
            android:layout_height="37dp"
            android:background="@drawable/courses_comments_shape"
            android:layout_toRightOf="@+id/teacherComments"
            android:layout_marginLeft="27dp"
            android:text="@string/coursesComments"
            android:textSize="12sp"
            android:gravity="center"
            android:textColor="#FFFFFFFF"/>
        <TextView
            android:id="@+id/otherComments"
            android:layout_width="71dp"
            android:layout_height="37dp"
            android:background="@drawable/other_comments_shape"
            android:layout_toRightOf="@+id/courseComments"
            android:layout_marginLeft="28dp"
            android:text="@string/otherComments"
            android:textSize="12sp"
            android:gravity="center"
            android:textColor="#FFFFFFFF"/>
        </RelativeLayout>
        
        <RelativeLayout
            android:id="@+id/commentsContent"
            android:layout_width="380dp"
            android:layout_height="84dp"
            android:layout_below="@+id/commentsTitle"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="31dp"
            android:background="@drawable/contents_comments_shape">
            <EditText
                android:id="@+id/contents"
                android:layout_width="380dp"
                android:layout_height="84dp"
                android:gravity="top|left"
                android:paddingTop="10dp"
                android:background="@null"
                android:textCursorDrawable="@drawable/color_cursor"
                android:imeOptions="flagNoExtractUi"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:maxLength="300"
                android:textColor="#FF222222"
                android:textSize="13sp"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/loadLayout"
            android:layout_width="87dp"
            android:layout_height="87dp"
            android:layout_toRightOf="@+id/commentsContent"
            android:layout_below="@id/commentsTitle"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="12dp"
            android:background="@drawable/load_layout_shape">
            <Button
                android:id="@+id/loadPic"
                android:layout_width="37dp"
                android:layout_height="30dp"
                android:background="@mipmap/opinion_icon_camera"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="25dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/loadPic"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="6dp"
                android:text="上传截图"
                android:textSize="11sp"
                android:textColor="#222222"
                />
        </RelativeLayout>
       <LinearLayout
           android:id="@+id/imgLinearlayout"
           android:layout_width="match_parent"
           android:layout_height="73dp"
           android:orientation="horizontal"
           android:layout_below="@+id/commentsContent"
           android:layout_marginTop="7dp"
           android:visibility="gone">
           <ImageView
               android:id="@+id/imgShow1"
               android:layout_width="73dp"
               android:layout_height="73dp"
               android:layout_marginLeft="30dp"
               android:src="@drawable/load_layout_shape"
               android:scaleType="centerCrop"
               android:visibility="gone"
               />

           <ImageView
               android:id="@+id/imgShow2"
               android:layout_width="73dp"
               android:layout_height="73dp"
               android:layout_marginLeft="9dp"
               android:src="@drawable/load_layout_shape"
               android:scaleType="centerCrop"
               android:visibility="gone"
               />
           <ImageView
               android:id="@+id/imgShow3"
               android:layout_width="73dp"
               android:layout_height="73dp"
               android:layout_marginLeft="9dp"
               android:src="@drawable/load_layout_shape"
               android:scaleType="centerCrop"
               android:visibility="gone"
               />
       </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_below="@+id/imgLinearlayout"
            android:layout_marginBottom="14dp"
            android:layout_marginTop="20dp"
            >
           <TextView
               android:id="@+id/commit"
               android:layout_width="174dp"
               android:layout_height="36dp"
               android:layout_centerInParent="true"
               android:background="@drawable/selector_weixin"
               android:text="@string/commitComments"
               android:gravity="center"
               android:textColor="#ffffffff"
               android:textSize="15sp"/>
        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>